# video-subtitle-remover

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  api.py  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/inpaint/: sttn_auto_inpaint.py
backend/inpaint/utils/: sttn_utils.py
backend/inpaint/video/core/: utils.py
backend/tools/: inpaint_tools.py  subtitle_detect.py
docs/superpowers/plans/: 2026-06-10-subtitle-edge-residual.md
docs/superpowers/recaps/: 2026-06-12-subtitle-erasure-optimization-recap.md
docs/superpowers/specs/: 2026-06-10-subtitle-edge-residual-design.md
tests/: test_inpaint_tools.py
